--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,9 @@
+@use './var';
+
+@import '~bootstrap/scss/bootstrap';
+@import '~bootstrap/scss/bootstrap-utilities';
+@import '~bootstrap/scss/bootstrap-reboot';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
