--- a/src/components/SearchComponent/SearchComponent.module.scss
+++ b/src/components/SearchComponent/SearchComponent.module.scss
@@ -4,7 +4,7 @@
   left:0px;
   right:0px;
   padding:20px 12px;
-  // width: 100vw;
+  z-index: 2;
   background: #2e93e6;
   .inputWrapper {
     position: relative;
