--- a/src/components/MediaComp/GIFComp.module.scss
+++ b/src/components/MediaComp/GIFComp.module.scss
@@ -1,10 +1,11 @@
 .gifView {
   padding: 8px;
   .hoverBox {
-    transition: all 0.5s;
+    transition: all 0.2s;
     min-height:100px;
     &:hover {
-      scale: 1.05;
+      // scale: 1.05;
+      transform: scale(1.05);
       cursor: pointer;
     }
   }
